vlib/v/checker/tests/unexpected_or.out
vlib/v/checker/tests/unexpected_or.v:6:7: error: unexpected `or` block, the function `ret_zero` does not return an optional
    4 |
    5 | fn main() {
    6 |     _ := ret_zero() or { 1 }
      |          ~~~~~~~~~~
    7 | }
